header z-index fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@
   position: relative;
   background-color: #f2f2f2;
   display: flex;
+  z-index: 1;
 }
 
 .header__title {
@@ -46,7 +47,6 @@
   font-weight: bold;
   align-self: center;
   margin: 0 0 0 64px;
-  z-index: 2;
 }
 
 .header__subtitle {
@@ -57,7 +57,6 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  z-index: 2;
   margin: 0;
 }
 
@@ -72,7 +71,7 @@
   right: 0;
   width: 765px;
   height: 608px;
-  z-index: 1;
+  z-index: -1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -83,6 +82,7 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  z-index: -2;
 }
 /* end header styles */
 
